glx/testdata/invalid/missing-required-fields/relationships/rel-missing-persons.glx
relationships:
  rel-missing-persons:
    type: marriage


